# aistudio-core

./: .env.template  LICENSE  Makefile  README.md  pyproject.toml
aistudio/: __init__.py  version.py
aistudio/core/: __init__.py  experiment.py
aistudio/core/evals/: metrics.py
aistudio/core/io/: downloader.py  filesystem.py  reader.py  utils.py  writer_xls.py
aistudio/core/perf/: profiler.py
aistudio/core/transform/: __init__.py  datetime.py  normalizers.py
aistudio/core/utils/: env_utils.py  import_utils.py  nb_utils.py
aistudio/datasets/: __init__.py  catalog.py  dataset.py  info.py  reporter.py
aistudio/datasets/vision/: dataset.py
aistudio/infra/: trace.py
aistudio/integrations/huggingface/: reader.py
aistudio/integrations/openai/: encoding.py
aistudio/integrations/pydantic/: transforms.py
aistudio/integrations/sentencetransformers/: encoding.py
aistudio/integrations/torch/: utils.py
aistudio/ui/: plotter.py
apps/integrations/hf/: analysis.ipynb  cat_embeddings.ipynb  encoding.ipynb
apps/programs/environment/: prg_environ.py
config/: config.yaml
config/experimentation/: experiment.yaml
config/runtimes/: python.env
environment/dependencies/: requirements.txt  requirements_ml.txt  requirements_server.txt  requirements_ui.txt
environment/dependencies/modals/: requirements_audio.txt
environment/dependencies/providers/: requirements_arize.txt  requirements_griptape.txt  requirements_hf.txt  requirements_langchain.txt  requirements_llamaindex.txt
scripts/: start_jupyter_nb.sh
